--- a/WishList/Views/Home/Index.cshtml
+++ b/WishList/Views/Home/Index.cshtml
@@ -1,6 +1,4 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@{
-}
+﻿@model WishList.Models.Item
+
 <h1>Welcome to my project</h1>
+<a asp-action="Index" asp-controller="Item">View Wishlist</a>
